src/objects/copado__Artifact__c.object
<CustomObject>
    <fields>
        <fullName>cmcSf__Api_Version__c</fullName>
        <inlineHelpText>The api version to be used for the packaging CLI commands. If this is not specified, the default value, i.e. the api version of the Dev Hub, will be used. Specify in the format, e.g. 54.0.
Note that if Api Version has also been specified in the child Package Version, that value will be used.</inlineHelpText>
        <label>Api Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcSf__IsOrgDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Org Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmcSf__PackagePath__c</fullName>
        <inlineHelpText>Use this to specify the path for creating the package. This path should be available in sfdx-project.json of your repository.</inlineHelpText>
        <label>Package Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Artifact_Repository__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is Repository where the Artifact can be stored, in the master branch</inlineHelpText>
        <label>Package Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Artifact_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Package Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>copado__Artifact_Version__c.copado__Artifact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Artifact_Version__c</referenceTo>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__DataJSON__c</fullName>
        <label>Data JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__DefaultBranch__c</fullName>
        <description>Field to specify the default branch in the repository from where new packages, versions, builds, images... are created.</description>
        <inlineHelpText>Field to specify the default branch in the repository from where new packages, versions, builds, images... are created. This parameter is optional.</inlineHelpText>
        <label>Default Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__DefaultPath__c</fullName>
        <description>Field to specify the default folder of your source code in the repository from where new packages, versions, builds, images... are created. This parameter is optional.</description>
        <inlineHelpText>Field to specify the default folder of your source code in the repository from where new packages, versions, builds, images... are created. This parameter is optional.</inlineHelpText>
        <label>Default Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <inlineHelpText>The description of the package</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__IsOrgDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Org Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__LastJobExecutionId__c</fullName>
        <label>Last Job Execution Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__No_Namespace__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the package creation with no namespace; available only for unlocked packages.</inlineHelpText>
        <label>No Namespace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The credential where the metadata of the Artifact is going to be retrieved from, for unlocked packages and 2GP.
The credential where the unmanaged package is created from.</inlineHelpText>
        <label>Source Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Package_Id__c</fullName>
        <inlineHelpText>Related package identifier. Being used as a Package Id for package version creation and also in use into the sfdx-project.json file as a package alias.</inlineHelpText>
        <label>Package Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Package_Namespace__c</fullName>
        <inlineHelpText>In a packaging context, a namespace prefix is a one to 15-character alphanumeric identifier that distinguishes your package from packages of other developers on AppExchange. Not required for unlocked packages.</inlineHelpText>
        <label>Package Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Package_Type__c</fullName>
        <inlineHelpText>For detailed information : https://developer.salesforce.com/docs/atlas.en-us.sfdx_dev.meta/sfdx_dev/sfdx_dev_dev2gp_plan_pkg_types.htm</inlineHelpText>
        <label>Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unlocked</fullName>
                    <default>true</default>
                    <label>Unlocked</label>
                </value>
                <value>
                    <fullName>Second-Generation Package</fullName>
                </value>
                <value>
                    <fullName>First-Generation Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sfdc_Login_Url__c</fullName>
        <defaultValue>&quot;https://login.salesforce.com&quot;</defaultValue>
        <inlineHelpText>The login URL that the force:auth commands use. If not specified, the default is login.salesforce.com. Override the default value if you want users to authorize to a specific Salesforce instance.</inlineHelpText>
        <label>Sfdc Login Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Source_Api_Version__c</fullName>
        <inlineHelpText>The API version that the source of your package is compatible with. This field is important if you’re using a metadata type that has changed in a recent salesforce release.</inlineHelpText>
        <label>Source Api Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
                <value>
                    <fullName>5.0</fullName>
                </value>
                <value>
                    <fullName>6.0</fullName>
                </value>
                <value>
                    <fullName>7.0</fullName>
                </value>
                <value>
                    <fullName>8.0</fullName>
                </value>
                <value>
                    <fullName>9.0</fullName>
                </value>
                <value>
                    <fullName>10.0</fullName>
                </value>
                <value>
                    <fullName>11.0</fullName>
                </value>
                <value>
                    <fullName>12.0</fullName>
                </value>
                <value>
                    <fullName>13.0</fullName>
                </value>
                <value>
                    <fullName>14.0</fullName>
                </value>
                <value>
                    <fullName>15.0</fullName>
                </value>
                <value>
                    <fullName>16.0</fullName>
                </value>
                <value>
                    <fullName>17.0</fullName>
                </value>
                <value>
                    <fullName>18.0</fullName>
                </value>
                <value>
                    <fullName>19.0</fullName>
                </value>
                <value>
                    <fullName>20.0</fullName>
                </value>
                <value>
                    <fullName>21.0</fullName>
                </value>
                <value>
                    <fullName>22.0</fullName>
                </value>
                <value>
                    <fullName>23.0</fullName>
                </value>
                <value>
                    <fullName>24.0</fullName>
                </value>
                <value>
                    <fullName>25.0</fullName>
                </value>
                <value>
                    <fullName>26.0</fullName>
                </value>
                <value>
                    <fullName>27.0</fullName>
                </value>
                <value>
                    <fullName>28.0</fullName>
                </value>
                <value>
                    <fullName>29.0</fullName>
                </value>
                <value>
                    <fullName>30.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Target_Dev_Hub_Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Copado org credential for the dev hub which will be used to create and store the package and its versions</inlineHelpText>
        <label>Target Dev Hub Org</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only dev hub org credentials can be selected. Given value not found or it is not a dev hub org.</errorMessage>
            <filterItems>
                <field>copado__Org__c.copado__is_Developer_Hub_Org__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipName>packageArtifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>VWFS_Demo</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Package A,Package B</value>
        </filters>
        <label>VWFS_Demo</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Package_Id__c</columns>
        <columns>copado__Artifact_Version__c</columns>
        <columns>copado__Package_Namespace__c</columns>
        <columns>copado__Package_Type__c</columns>
        <columns>copado__Artifact_Repository__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Target_Dev_Hub_Org__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <recordTypes>
        <fullName>copado__Git_Artifact</fullName>
        <active>true</active>
        <description>Version Control System centric package</description>
        <label>Git Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Package_Artifact</fullName>
        <active>true</active>
        <description>Salesforce Unlocked and Second-Generation Managed Package</description>
        <label>Salesforce Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__User_Story_Bundle</fullName>
        <active>true</active>
        <description>User Story Bundle</description>
        <label>User Story Bundle</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cmcSf__Api_Version_Format</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Package_Artifact&apos; &amp;&amp; ISPICKVAL( copado__Pipeline__r.copado__Platform__c ,&apos;SFDX&apos;)  &amp;&amp; NOT(ISBLANK(cmcSf__Api_Version__c)) &amp;&amp; NOT(REGEX(cmcSf__Api_Version__c, &quot;^\\d*.0&quot;))</errorConditionFormula>
        <errorDisplayField>cmcSf__Api_Version__c</errorDisplayField>
        <errorMessage>The API version specified is not valid. It must be in the format, Number.0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cmcSf__No_Namespace_Validation</fullName>
        <active>true</active>
        <description>No Namespace cannot be set to true for a Managed package</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Package_Artifact&apos;   &amp;&amp;  ISPICKVAL( copado__Pipeline__r.copado__Platform__c ,&apos;SFDX&apos;)  &amp;&amp; ISPICKVAL(copado__Package_Type__c, &apos;Managed&apos;) &amp;&amp; copado__No_Namespace__c  = true</errorConditionFormula>
        <errorDisplayField>copado__No_Namespace__c</errorDisplayField>
        <errorMessage>No Namespace cannot be set to true for a Managed package</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__ArtifactNameCannotChange</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE(Name) != Name</errorConditionFormula>
        <errorMessage>Package names are in use for DX folder structure, therefore, package names are not editable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Artifact_Repo_Control_For_Package_Type</fullName>
        <active>true</active>
        <description>Package Repository null control depending of Package Type</description>
        <errorConditionFormula>IF(
	AND(	
		RecordType.DeveloperName != &apos;User_Story_Bundle&apos;,
		OR(
			AND(
				ISBLANK(copado__Artifact_Repository__c), 
				(ISPICKVAL(copado__Package_Type__c, &apos;Unlocked&apos;) || ISPICKVAL(copado__Package_Type__c, &apos;Second-Generation Package&apos;))
			),
			(NOT(ISBLANK(copado__Artifact_Repository__c)) &amp;&amp; ISPICKVAL(copado__Package_Type__c, &apos;First-Generation Package&apos;) )
		)
	), true, false
)</errorConditionFormula>
        <errorDisplayField>copado__Artifact_Repository__c</errorDisplayField>
        <errorMessage>Repository relation for packages is required for Unlocked and Second Generation Packages and should be empty for First Second Generation Packages</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Name_should_not_contain_empty_space</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS(Name,&apos; &apos;) &amp;&amp; RecordType.DeveloperName != &apos;User_Story_Bundle&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Package name cannot contain white spaces</errorMessage>
    </validationRules>
</CustomObject>